@@ -1,3 +1,8 @@
+2006-07-14  Michael Wetherell  <mike.wetherell@ntlworld.com>
+
+	* emulparams/elf_x86_64.sh (LIBPATH_SUFFIX, ELF_INTERPRETER_NAME):
+	Set for *-*-solaris2*.
+
 2006-07-24  Ralk Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* ld.texinfo: Fix spelling mistakes.
