@@ -1,3 +1,8 @@
+2006-07-24  Michael Wetherell  <mike.wetherell@ntlworld.com>
+
+	* elf.c (bfd_section_from_shdr): Reject unrecognised OS-specific
+	sections only if the SHF_OS_NONCONFORMING flag is present.
+
 2006-07-24  Nick Clifton  <nickc@redhat.com>
 
 	PR ld/2729
